[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Sprites/Return_button-export.png" type="Texture" id=1]
[ext_resource path="res://Assets/Sprites/Setting_button-export.png" type="Texture" id=2]
[ext_resource path="res://Assets/Sprites/Report_button.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sprites/Morning-export.png" type="Texture" id=4]
[ext_resource path="res://Scenes/Base_screen.gd" type="Script" id=5]
[ext_resource path="res://Assets/Sprites/Request_button.png" type="Texture" id=6]

[node name="Base_screen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="Node" parent="."]

[node name="Settings" type="TextureButton" parent="Buttons"]
margin_left = 816.0
margin_top = 552.0
margin_right = 944.0
margin_bottom = 594.0
texture_normal = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings_label" type="Label" parent="Buttons"]
margin_left = 848.0
margin_top = 568.0
margin_right = 908.0
margin_bottom = 582.0
custom_colors/font_color = Color( 0.211765, 0.968627, 0.184314, 1 )
text = "SETTINGS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Return" type="TextureButton" parent="Buttons"]
margin_left = 856.0
margin_top = 24.0
margin_right = 952.0
margin_bottom = 120.0
rect_scale = Vector2( 0.75, 0.75 )
texture_normal = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Time" type="Node" parent="."]

[node name="Sprite" type="Sprite" parent="Time"]
position = Vector2( 50.5, 50.5 )
texture = ExtResource( 4 )

[node name="Current_time" type="Label" parent="Time"]
margin_left = 8.0
margin_top = 112.0
margin_right = 120.0
margin_bottom = 126.0
custom_colors/font_color = Color( 0.211765, 0.968627, 0.184314, 1 )
text = "DAY 1: MORNING"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Period_time" type="Label" parent="Time"]
margin_left = 8.0
margin_top = 160.0
margin_right = 120.0
margin_bottom = 174.0
custom_colors/font_color = Color( 0.211765, 0.968627, 0.184314, 1 )
text = "30S UNTIL NOON"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Main_functions" type="Node" parent="."]

[node name="Report" type="TextureButton" parent="Main_functions"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -200.0
margin_top = 16.0
margin_right = 248.0
margin_bottom = 104.0
texture_normal = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Request" type="TextureButton" parent="Main_functions"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -144.0
margin_top = 120.0
margin_right = 80.0
margin_bottom = 164.0
rect_scale = Vector2( 1.5, 1.5 )
texture_normal = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Report_label" type="Label" parent="Main_functions"]
margin_left = 480.0
margin_top = 56.0
margin_right = 529.0
margin_bottom = 70.0
custom_colors/font_color = Color( 0.211765, 0.968627, 0.184314, 1 )
text = "REPORT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Request_label" type="Label" parent="Main_functions"]
margin_left = 352.0
margin_top = 136.0
margin_right = 656.0
margin_bottom = 168.0
custom_colors/font_color = Color( 0.211765, 0.968627, 0.184314, 1 )
text = "REQUEST INFORMATION"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pathway" type="Label" parent="."]
margin_left = 8.0
margin_top = 576.0
margin_right = 48.0
margin_bottom = 590.0
custom_colors/font_color = Color( 0.211765, 0.968627, 0.184314, 1 )
text = ">> Main_Screen"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Request_progress" type="Label" parent="."]
margin_left = 360.0
margin_top = 560.0
margin_right = 656.0
margin_bottom = 574.0
custom_colors/font_color = Color( 0.211765, 0.968627, 0.184314, 1 )
text = "REQUEST PROGRESS:"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Request_progress_2" type="Label" parent="Request_progress"]
margin_top = 24.0
margin_right = 296.0
margin_bottom = 38.0
custom_colors/font_color = Color( 0.211765, 0.968627, 0.184314, 1 )
text = "0%"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Buttons/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="Buttons/Return" to="." method="_on_Return_pressed"]
[connection signal="pressed" from="Main_functions/Report" to="." method="_on_Report_pressed"]
